<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/first_no"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/round_result"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/num_1"
                android:inputType="number"
                android:textColor="@color/black"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/second_no"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:background="@drawable/round_result"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/num_2"
                android:inputType="number"
                android:textColor="@color/black"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/answer"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/round_result"
                android:elevation="1dp"
                android:gravity="center"
                android:hint="@string/result"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:targetApi="lollipop" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/roundbtn"
                android:text="@string/add"
                android:textSize="25sp"
                tools:ignore="ButtonStyle,OnClick" />

            <Button
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/roundbtn"
                android:text="@string/sub"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/mul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/roundbtn"
                android:text="@string/mul"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/roundbtn"
                android:text="@string/div"
                android:textSize="25sp"
                tools:ignore="ButtonStyle,OnClick" />

            <Button
                android:id="@+id/mod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/roundbtn"
                android:text="@string/mod"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/pow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/roundbtn"
                android:text="@string/pow"
                android:textSize="25sp"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

        <Button
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/roundbtn"
            android:text="@string/equ"
            android:textSize="25sp" />


    </LinearLayout>


</LinearLayout>